# seqo

./: Cargo.toml  LICENSE  README.md  pertidxs.json
examples/: mclaughlin.rs
seqo-derive/: Cargo.toml
seqo-derive/src/: add_assign.rs  expand_block_delta.rs  lib.rs  state_logger.rs
simd/: Cargo.toml
simd-derive/: Cargo.toml
simd-derive/src/: lib.rs
simd/src/: lib.rs  mask.rs  mod.rs
src/: aggregate_perturbation.rs  block_perturbation.rs  circle.rs  geometric_constraint.rs  helpers.rs  idx_period_map.rs  lib.rs  local_search.rs  mine.rs  objective_function.rs  perturbation_summary.rs  recovery_curve.rs  relation_provider.rs  state_summary.rs  stockpile.rs  walkers.rs
src/simd/: cross.rs  mod.rs  scaled_add.rs
src/simd/proc/: Cargo.toml
tests/: seqo_derive.rs
