[package]
name = "seqo"
version = "0.1.0"
edition = "2024"

[dependencies]
simd = { path = "./simd" }
seqo-derive = { path = "./seqo-derive" }
indxvec = "1.9.6"
itertools = "0.14.0"
rayon = "1.10.0"
rstar = "0.12.2"
rustc-hash = "2.1.1"
indicatif = { version = "0.18.3", features = ["rayon"] }
parking_lot = "0.12.3"
pulp = "0.21.4"
crossbeam = "0.8.4"
dashmap = { version = "6.1.0", features = ["rayon"] }
wide = "1.1.1"
rand = "0.9.1"
radsort = "0.1.1"
ahash = "0.8.12"
uuid = { version = "1.19.0", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
log = "0.4.29"

env_logger = "0.11.8"
chrono = "0.4.42"

[dev-dependencies]
mimalloc = "0.1.47"
csv = "1.3.1"
